apps/projects/incubator/node-js/arduino-status/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arduino-status
  namespace: arduino-status
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: arduino-status
  type: ClusterIP
